--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: CircleFont;
-    src: url(/Gill-sans.ttf)
-}
 
 :root {
     --main-bg-color: #182634;
@@ -12,7 +8,15 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Gill sans';
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+}
+
+
+h2 {
+    font-family: inherit;
+    font-style: inherit;
+    font-weight: 600;
 }
 
 
@@ -69,8 +73,8 @@
 
 .brands img {
     margin: 1em auto;
-    width: 10em;
-    height: 10em;
+    width: 8em;
+    height: 8em;
 }
 
 .brands__title {
@@ -97,13 +101,17 @@
 }
 
 .main__text {
+    font-family: inherit;
     font-size: 1.5em;
+    font-style: inherit;
     font-weight: 100;
     margin: 2em;
     text-align: center;
 }
 
 .menu {
+    font-family: inherit;
+
     display: flex;
     justify-content: space-around;
     width: 30%;
@@ -168,7 +176,7 @@
 }
 
 .section__img img {
-    width: 50%;
+    width: 40%;
     height: auto;
     border-radius: 2%;
 }
@@ -191,8 +199,9 @@
 }
 
 .title__main{
-    font-family: 'Gill sans';
+    font-family: inherit;
     font-size: 2em;
+    font-style: inherit;
 }
 
 .title--heading *{
