--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root {
     --main-bg-color: #182634;
     --green-circle: #74F807;
+    --font-circle: #212529;
 }
 
 * {
@@ -73,8 +74,8 @@ h2 {
 
 .brands img {
     margin: 1em auto;
-    width: 8em;
-    height: 8em;
+    width: 5em;
+    height: 5em;
 }
 
 .brands__title {
@@ -107,11 +108,11 @@ h2 {
     font-weight: 100;
     margin: 2em;
     text-align: center;
+    color: var(--font-circle);
 }
 
 .menu {
     font-family: inherit;
-
     display: flex;
     justify-content: space-around;
     width: 30%;
@@ -176,7 +177,7 @@ h2 {
 }
 
 .section__img img {
-    width: 40%;
+    width: 30%;
     height: auto;
     border-radius: 2%;
 }
@@ -185,6 +186,7 @@ h2 {
     padding-left: 4em;
     width: 50%;
     align-self: center;
+    color: rgba(255,255,255,0.5); 
 }
 
 .section__description ul {
