--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --main-bg-color: #182634;
     --green-circle: #74F807;
     --font-circle: #212529;
+    --titles-size-on-pc: 2rem;
 }
 
 * {
@@ -80,8 +81,9 @@ h2 {
 
 .brands__title {
     color: var(--green-circle);
-    font-size: 2em;
+    font-size: var(--titles-size-on-pc);
     text-align: center;
+    position: relative;
 }
 
 .contact {
@@ -143,6 +145,7 @@ h2 {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 9999999;
 }
 
 .products {
@@ -164,9 +167,20 @@ h2 {
 }
 
 .products__title {
-    font-size: 2em;
-    text-align: center;
+    font-size: var(--titles-size-on-pc);
+    text-align: center; 
     color: var(--green-circle);
+    position: relative;
+}
+
+.products__title::before, .brands__title::before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    right: 56%;
+    bottom: 2px;
+    width: 5px;
+    background: linear-gradient(147.59deg,#1782ff 4.15%,#78ff00 69.15%,#ffe600 100%);
 }
 
 .section__img {
@@ -225,7 +239,7 @@ h2 {
 }
 
 
-@media (max-width: 360px) {
+@media (max-width: 400px) {
 
     #logo {
         width: 20%;
