--- a/style.css
+++ b/style.css
@@ -239,8 +239,9 @@ h2 {
 }
 
 
-@media (max-width: 400px) {
-
+@media only screen 
+and (max-width: 375px) 
+and (max-height: 812px) {
     #logo {
         width: 20%;
     }
