--- a/style.css
+++ b/style.css
@@ -240,8 +240,10 @@ h2 {
 
 
 @media only screen 
-and (max-width: 375px) 
-and (max-height: 812px) {
+and (max-width: 270px) 
+and (max-height: 554px) 
+and (max-height: 648px)
+and (max-width: 287px){
     #logo {
         width: 20%;
     }
