--- a/style.css
+++ b/style.css
@@ -240,10 +240,8 @@ h2 {
 
 
 @media only screen 
-and (max-width: 270px) 
-and (max-height: 554px) 
-and (max-height: 648px)
-and (max-width: 287px){
+and (max-width: 390px) 
+and (max-height: 844px) {
     #logo {
         width: 20%;
     }
@@ -269,6 +267,10 @@ and (max-width: 287px){
         display: block;
         width: 100%;
         padding: 0 2em;
+    }
+
+    .products__title::before, .brands__title::before {
+        right: 72%;
     }
     
     .section__img img {
