--- a/style.css
+++ b/style.css
@@ -239,9 +239,7 @@ h2 {
 }
 
 
-@media only screen 
-and (max-width: 390px) 
-and (max-height: 844px) {
+@media only screen and (min-width: 320px)  {
     #logo {
         width: 20%;
     }
