--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ h2 {
 }
 
 
-@media only screen and (min-width: 320px)  {
+@media only screen and (max-width: 400px)  {
     #logo {
         width: 20%;
     }
